plugins {
    id 'java-library'
    id 'maven-publish'
}

group = 'ru.mephi.it'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

ext {
    kubernetesClientVersion = '6.8.1'
    jacksonVersion = '2.15.2'
    slfVersion = '2.0.9'
    lombokVersion = '1.18.30'

    mockitoVersion = '5.7.0'
}

dependencies {
    // Внешние зависимости
    api "io.fabric8:kubernetes-client:${kubernetesClientVersion}"
    api "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"

    // Внутренние зависимости
    implementation("org.bouncycastle:bcprov-jdk15on:1.70")
    implementation "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
    implementation 'org.slf4j:slf4j-api:2.0.9'
    runtimeOnly 'ch.qos.logback:logback-classic:1.4.11'

    // Тестирование
    testImplementation "io.fabric8:kubernetes-server-mock:${kubernetesClientVersion}"
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    testImplementation 'org.assertj:assertj-core:3.24.2'
    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
    testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"

    // Ломбок
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

test {
    useJUnitPlatform()
}

publishing {
    publications {
        maven(MavenPublication) {
            from components.java
        }
    }
}